# yolov8_vehicle_detection

./: .gitignore  Cargo.toml  Readme.md  full_error.txt
configs/: train_config.yaml
data/Cars Detection/: data.yaml
src/: lib.rs  main.rs
src/config/: train config.yaml
src/data/: dataloader.rs  dataset.rs  mod.rs  transforms.rs
src/dataset/: mod.rs  preprocessing.rs
src/gui/: mod.rs  training_gui.rs
src/model/: backbone.rs  head.rs  loss.rs  mod.rs  neck.rs  nms.rs  yolo.rs
src/model/blocks/: bbox_decode.rs  bottleneck.rs  c2f.rs  concat.rs  conv.rs  mod.rs  sppf.rs  upsample.rs
src/training/: config.rs  early_stopping.rs  metrics.rs  mod.rs  state.rs  trainer.rs
