[package]
name = "yolov8_detection"
version = "0.1.0"
edition = "2021"
default-run = "train"
author = "nabella"

[lib]
name = "yolov8_detection"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[dependencies]
# Burn 0.19 with CPU backend
burn = { version = "0.19", features = ["train", "ndarray"] }
burn-ndarray = "0.19"

# Serialization 
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Image processing
image = "0.25"
imageproc = "0.23"
rusttype = "0.9"

# Utilities - PENTING!
rand = "0.8"
indicatif = "0.17"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# GUI 
eframe = "0.28"
egui = "0.28"
egui_plot = "0.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
